--- a/config/config.env
+++ b/config/config.env
@@ -3,5 +3,5 @@ DATABASE=mongodb+srv://lucia:r9iNCR9iSh71fkdF@cluster0.yxufv8x.mongodb.net/?retr
 JWTTOKEN="token"
 
 SERVICE=gmail
-USER=mytechports@gmail.com
+USER=luciachi@gmail.com
 EMAILPASS=ejcthlaxepduglwq
